--- a/main/test.in
+++ b/main/test.in
@@ -19,19 +19,19 @@ path_config = ./
 
 # eigenvector handling:
 number_of_eigen_vec = 120
-path_eigenvectors   = /data/LapHs/contraction_Markus/test_data/ev
+path_eigenvectors   = /hiskp2/eigensystems/A40.24_L24_T48_beta190_mul0040_musig150_mudel190_kappa1632700/hyp_062_058_3/nev_120/
 name_eigenvectors   = eigenvectors
-handling_vdaggerv   = read
-path_vdaggerv       = /data/LapHs/contraction_Markus/test_data/operators
+handling_vdaggerv   = build
+path_vdaggerv       = ./
 #path_vdaggerv       = /data2/test5/liuming_operators
 
 # output path
-output_path = /data2/test4
+output_path = /hiskp2/werner/output/sLapH_contraction-test
 overwrite_old = yes
 
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
-quark = u:6:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
+quark = u:6:TI:2:EI:6:DI:4:/hiskp2/perambulators/A40.24_sorted/light/
 
 # operators to be used                                                          
 [operator_lists]    
@@ -45,101 +45,102 @@ operator_list = g3.d0.p0,1,2,3,4
 operator_list = g12.d0.p0,1,2,3,4
 operator_list = g13.d0.p0,1,2,3,4
 operator_list = g5.d0.p0,1,2,3,4    
+operator_list = g5.d0.p0,1
     
 # all correlation functions which will be computed                              
 [correlator_lists]
-correlator_list = C2+:Q0:Op9:Q0:Op9 #pion
-correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-correlator_list = C20:Q0:Op0:Q0:Op0 #rho
-correlator_list = C20:Q0:Op0:Q0:Op1 #rho
-correlator_list = C20:Q0:Op0:Q0:Op2 #rho
-correlator_list = C20:Q0:Op0:Q0:Op3 #rho
-correlator_list = C20:Q0:Op0:Q0:Op4 #rho
-correlator_list = C20:Q0:Op0:Q0:Op5 #rho
-correlator_list = C20:Q0:Op0:Q0:Op6 #rho
-correlator_list = C20:Q0:Op0:Q0:Op7 #rho
-correlator_list = C20:Q0:Op0:Q0:Op8 #rho
-correlator_list = C20:Q0:Op1:Q0:Op0 #rho
-correlator_list = C20:Q0:Op1:Q0:Op1 #rho
-correlator_list = C20:Q0:Op1:Q0:Op2 #rho
-correlator_list = C20:Q0:Op1:Q0:Op3 #rho
-correlator_list = C20:Q0:Op1:Q0:Op4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op5 #rho
-correlator_list = C20:Q0:Op1:Q0:Op6 #rho
-correlator_list = C20:Q0:Op1:Q0:Op7 #rho
-correlator_list = C20:Q0:Op1:Q0:Op8 #rho
-correlator_list = C20:Q0:Op2:Q0:Op0 #rho
-correlator_list = C20:Q0:Op2:Q0:Op1 #rho
-correlator_list = C20:Q0:Op2:Q0:Op2 #rho
-correlator_list = C20:Q0:Op2:Q0:Op3 #rho
-correlator_list = C20:Q0:Op2:Q0:Op4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op5 #rho
-correlator_list = C20:Q0:Op2:Q0:Op6 #rho
-correlator_list = C20:Q0:Op2:Q0:Op7 #rho
-correlator_list = C20:Q0:Op2:Q0:Op8 #rho
-correlator_list = C20:Q0:Op3:Q0:Op0 #rho
-correlator_list = C20:Q0:Op3:Q0:Op1 #rho
-correlator_list = C20:Q0:Op3:Q0:Op2 #rho
-correlator_list = C20:Q0:Op3:Q0:Op3 #rho
-correlator_list = C20:Q0:Op3:Q0:Op4 #rho
-correlator_list = C20:Q0:Op3:Q0:Op5 #rho
-correlator_list = C20:Q0:Op3:Q0:Op6 #rho
-correlator_list = C20:Q0:Op3:Q0:Op7 #rho
-correlator_list = C20:Q0:Op3:Q0:Op8 #rho
-correlator_list = C20:Q0:Op4:Q0:Op0 #rho
-correlator_list = C20:Q0:Op4:Q0:Op1 #rho
-correlator_list = C20:Q0:Op4:Q0:Op2 #rho
-correlator_list = C20:Q0:Op4:Q0:Op3 #rho
-correlator_list = C20:Q0:Op4:Q0:Op4 #rho
-correlator_list = C20:Q0:Op4:Q0:Op5 #rho
-correlator_list = C20:Q0:Op4:Q0:Op6 #rho
-correlator_list = C20:Q0:Op4:Q0:Op7 #rho
-correlator_list = C20:Q0:Op4:Q0:Op8 #rho
-correlator_list = C20:Q0:Op5:Q0:Op0 #rho
-correlator_list = C20:Q0:Op5:Q0:Op1 #rho
-correlator_list = C20:Q0:Op5:Q0:Op2 #rho
-correlator_list = C20:Q0:Op5:Q0:Op3 #rho
-correlator_list = C20:Q0:Op5:Q0:Op4 #rho
-correlator_list = C20:Q0:Op5:Q0:Op5 #rho
-correlator_list = C20:Q0:Op5:Q0:Op6 #rho
-correlator_list = C20:Q0:Op5:Q0:Op7 #rho
-correlator_list = C20:Q0:Op5:Q0:Op8 #rho
-correlator_list = C20:Q0:Op6:Q0:Op0 #rho
-correlator_list = C20:Q0:Op6:Q0:Op1 #rho
-correlator_list = C20:Q0:Op6:Q0:Op2 #rho
-correlator_list = C20:Q0:Op6:Q0:Op3 #rho
-correlator_list = C20:Q0:Op6:Q0:Op4 #rho
-correlator_list = C20:Q0:Op6:Q0:Op5 #rho
-correlator_list = C20:Q0:Op6:Q0:Op6 #rho
-correlator_list = C20:Q0:Op6:Q0:Op7 #rho
-correlator_list = C20:Q0:Op6:Q0:Op8 #rho
-correlator_list = C20:Q0:Op7:Q0:Op0 #rho
-correlator_list = C20:Q0:Op7:Q0:Op1 #rho
-correlator_list = C20:Q0:Op7:Q0:Op2 #rho
-correlator_list = C20:Q0:Op7:Q0:Op3 #rho
-correlator_list = C20:Q0:Op7:Q0:Op4 #rho
-correlator_list = C20:Q0:Op7:Q0:Op5 #rho
-correlator_list = C20:Q0:Op7:Q0:Op6 #rho
-correlator_list = C20:Q0:Op7:Q0:Op7 #rho
-correlator_list = C20:Q0:Op7:Q0:Op8 #rho
-correlator_list = C20:Q0:Op8:Q0:Op0 #rho
-correlator_list = C20:Q0:Op8:Q0:Op1 #rho
-correlator_list = C20:Q0:Op8:Q0:Op2 #rho
-correlator_list = C20:Q0:Op8:Q0:Op3 #rho
-correlator_list = C20:Q0:Op8:Q0:Op4 #rho
-correlator_list = C20:Q0:Op8:Q0:Op5 #rho
-correlator_list = C20:Q0:Op8:Q0:Op6 #rho
-correlator_list = C20:Q0:Op8:Q0:Op7 #rho
-correlator_list = C20:Q0:Op8:Q0:Op8 #rho
-correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op3:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op4:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op5:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op6:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op7:Q0:Op9
-correlator_list = C3+:Q0:Op9:Q0:Op8:Q0:Op9
+correlator_list = C2+:Q0:Op10:Q0:Op10 #pion
+#correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+##correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+#correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+#correlator_list = C20:Q0:Op0:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op3:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op4:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op5:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op6:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op7:Q0:Op8 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op0 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op1 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op2 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op3 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op4 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op5 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op6 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op7 #rho
+#correlator_list = C20:Q0:Op8:Q0:Op8 #rho
+#correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op3:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op4:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op5:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op6:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op7:Q0:Op9
+#correlator_list = C3+:Q0:Op9:Q0:Op8:Q0:Op9
 
