--- a/integration-test-L4/test_all.ini
+++ b/integration-test-L4/test_all.ini
@@ -51,26 +51,26 @@ operator_list = g5.d0.p0
 
 # pion
 correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
-#correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
+correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
 
 # rho 2pt functions
-correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op0:Q0:Op1:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op0:Q0:Op2:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op0:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op1:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op1:Q0:Op2:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op0:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op1:P0,1,2,3,4 #rho
-correlator_list = C20:Q0:Op2:Q0:Op2:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op1:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op0:Q0:Op2:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op0:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op1:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op1:Q0:Op2:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op0:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op1:P0,1,2,3,4 #rho
+#correlator_list = C20:Q0:Op2:Q0:Op2:P0,1,2,3,4 #rho
 
 # charged 3pt diagrams 
-correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
-correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9:P0,1,2,3,4
-correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9:P0,1,2,3,4
+#correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
+#correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9:P0,1,2,3,4
+#correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9:P0,1,2,3,4
 
 # neutral 3pt diagrams
-correlator_list = C30:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
+#correlator_list = C30:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
 
 # charged 4pt diagrams
 correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
@@ -79,8 +79,8 @@ correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 
 # neutral 4pt diagrams
-correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+#correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
+#correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 #correlator_list = C40B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
 #correlator_list = C40C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
 
