--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -45,9 +45,13 @@ operator_list = g12.d0.p0,1
 operator_list = g13.d0.p0,1
 operator_list = g5.d0.p0,1
 operator_list = g5.d0.p0
+operator_list = g4.d0.p0
     
 # all correlation functions which will be computed                              
 [correlator_lists]
+
+# Vacuum bubble
+#correlator_list = C1:Q0:Op11:P0 
 
 # pion
 correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
